# chatApp

./: .gitignore
client1/: CMakeLists.txt  appicon.rc  client.cpp  client.h  client.ui  login.cpp  login.h  main.cpp  resource.qrc
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
